syntax = "proto2";

package com.uofantarctica.dsync.model;

message SyncState
{
  required string name = 1;
  enum ActionType
  {
    UPDATE = 0;
    DELETE = 1;
    OTHER = 2;
  }
  required ActionType type = 2;
  message SeqNo
  {
    required uint64 seq = 1;
    required uint64 session = 2;
  }
  optional SeqNo seqno = 3;
  optional bytes application_info = 4;
}

message SyncStateMsg
{
  repeated SyncState ss = 1;
}
